openshift/base/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
  creationTimestamp: "2026-06-04T03:35:24Z"
  generation: 3
  labels:
    app: banking-api
  name: banking-api
  namespace: openshif-tbanking-ap-dev
  resourceVersion: "5617671453"
  uid: f2499a20-e42c-4133-82b5-ee82237dd988
spec:
  progressDeadlineSeconds: 600
  replicas: 0
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: banking-api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: banking-api
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/openshif-tbanking-ap-dev/api-service:openshift-amd64
        imagePullPolicy: IfNotPresent
        name: api-service
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  conditions:
  - lastTransitionTime: "2026-06-04T03:43:35Z"
    lastUpdateTime: "2026-06-04T03:43:35Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2026-06-04T03:35:24Z"
    lastUpdateTime: "2026-06-04T03:43:35Z"
    message: ReplicaSet "banking-api-5f98496d6f" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 3
